# haskell-slides

./: Constraints.hs  Constraints.markdown  Parsec.markdown  README.md  SYB.markdown  syb1.hs
hoas/: Applicative.hs  HOAS.hs  Main.lhs  Monad.hs  Monoid.hs  README.md
monads/: README.md
monoids/: README.md
mutable/: mutable-example.cabal
mutable/src/Mutable/: .Example.lhs.swp  Example  Example.lhs
syb/: README.md  syb2.hs
