name:                mutable-example
version:             0.1.0.0
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           (c) Phil Freeman 2015 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Mutable.Example 
  build-depends:       base >=4.7 && <4.8, stm, transformers, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
